# sumo-selfplay-rl

./: .gitignore  README.md
bridge_io/: request.json
docs/: egac_evaluation_protocol.xml
docs/design/: env_spec.md  experiment_plan.md  game_design.md  reward_design.md
docs/final/: DRP_final_report.tex  references.bib
docs/presentation/: presentation_outline.aux  presentation_outline.fdb_latexmk  presentation_outline.fls  presentation_outline.out  presentation_outline.tex
docs/progress/: progress_report.tex
python/: README.md  pyproject.toml  requirements.txt
python/configs/: train.yaml
python/scripts/: collect_rollout.py  eval_checkpoint.py  eval_mlp_policy.py  play_human_vs_policy.py  run_heuristic_matches.py  test_unity_batch_bridge.py  test_unity_bridge.py  test_unity_file_bridge.py  train_imitation.py  train_selfplay.py
python/src/: __init__.py  train.py
python/src/agents/: __init__.py  actor_critic.py  imitation_dataset.py  imitation_trainer.py  policy.py
python/src/algorithms/: __init__.py  ppo_buffer.py  ppo_trainer.py  rollout_collector.py  self_play_manager.py  trajectory_serializer.py
python/src/envs/: __init__.py  action_adapter.py  observation_adapter.py  self_play_arena_env.py  unity_bridge_client.py  unity_file_bridge_client.py  vec_self_play_arena_env.py
python/src/eval/: __init__.py  evaluate.py
unity/: README.md  project_structure.md  scripts_plan.md
unity/bridge_io/: response_03f633502b4d45d7adc54f1b3bed58e3.json  response_07990f5b95e94fe3bda5cca884ea6463.json  response_0b8fee2b8f0142d591ecac9c0f060b01.json  (+20 more)
(+18 files in other folders)
